--- a/wordDifference.html
+++ b/wordDifference.html
@@ -5,13 +5,35 @@
   <link href="./pageStyle.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+  <h1>看差異學日文</h1>
 
-  <h2>看差異學日文</h2>
-
-   <!-- index -->
-   <div class="box">
-     <p>索引</p>
+ <!-- index -->
+ <div>
+  <p>索引</p>
+  <div id="list">
+  <ul>
+    <li><a href="#008">転ぶ・躓く</a></li> 
+    <li><a href="#007">治す・癒す</a></li>
+    <li><a href="#006">集う・集まる</a></li>
+    <li><a href="#005">確か・確かに</a></li>
+    <li><a href="#004">温かい・温い</a></li>
+    <li><a href="#003">冷める・冷える</a></li>
+    <li><a href="#002">利益・ご利益</a></li>
+    <li><a href="#001">我慢・辛抱</a></li>
+    <li><a href="#008">日にち・日付</a></li> 
+    <li><a href="#007">重い・重たい</a></li>
+    <li><a href="#006">徹夜・夜更かし</a></li>
+    <li><a href="#005">側・横・隣</a></li>
+    <li><a href="#004">済む・終わる</a></li>
+    <li><a href="#003">大抵・大体</a></li>
+    <li><a href="#002">勘違い・間違い</a></li>
+    <li><a href="#001">止む・止まる</a></li>
+    <li><a href="#008">大分・随分</a></li> 
+    <li><a href="#007">教える・教わる</a></li>
+  </ul>
   </div>
+</div>
+
   <!-- Pictures -->
   <div class="box">
    
