--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="google-site-verification" content="WRIGwwagdGNL9kugmhQuKxRNy_BTf5T7LznHYCBPlDA" />
   <title>日文小聚落</title>
+  <meta name="google-site-verification" content="WRIGwwagdGNL9kugmhQuKxRNy_BTf5T7LznHYCBPlDA" />
   <link href="./style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
@@ -11,7 +11,7 @@
   
   <!-- Link Section -->
   <div>
-    <p>人生無常，追尋平衡</p>
+    <p>人生無一刻不在變動，在浮沉世間追尋平衡</p>
     <p>道道生活的兩三事，感受生命的獨一性</p>
   </div>
 
