--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 
   <h1>日文小聚落</h1>
-  
+  <a href="https://www.instagram.com/japanese_h2o/"><img src="./resources/igIcon.png"></a>
+
   <!-- Link Section -->
   <div>
     <p>人生無一刻不在變動，在浮沉世間追尋平衡</p>
