--- a/wordCompose.html
+++ b/wordCompose.html
@@ -6,11 +6,12 @@
 </head>
 <body>
   <h1>看複合語學日文</h1>
+  <a href="https://www.instagram.com/japanese_h2o/"><img src="./resources/igIcon.png"></a>
 
-  <!-- index -->
-  <div>
-    <p>索引</p>
-    <div id="list">
+<!-- index -->
+<div>
+  <p>索引</p>
+  <nav id="list">
     <ul>
       <li><a href="#008">放題</a></li> 
       <li><a href="#007">強/弱</a></li>
@@ -20,29 +21,51 @@
       <li><a href="#003">音痴</a></li>
       <li><a href="#002">たて</a></li>
       <li><a href="#001">心地</a></li>
-    </ul>
-    </div>
-  </div>
+     </ul>
+  </nav>
+</div>
 
   <!-- Pictures -->
   <div class="box" id="picture">
     <div id="008">
-      <h2>放題</h2>
-        <p>用法</p>
+      <h2>放題（ほうだい）</h2>
+        <p>用法:名詞/動詞ます形/形容動詞語幹/たい + <b>放題</b> = 表示恣意地從事某行為</p>
+        <p>例:食べ放題(吃到飽)、10分かけ放題(前10分鐘內通話免費)、言いたい放題(自顧自地說)</p>
     </div>
     <div id="007">
-      <h2>強/弱</h2>
-        <p></p>
+      <h2>強（きょう）/弱（じゃく）</h2>
+        <p>用法:數量詞 + <b>強/弱</b> = 表示比某數量稍微多/少一些 (去掉尾數時使用)</p>
+        <p>例:8割強(8成多左右)、2年弱(將近2年)</p>
+        <p>*注意:此用法較為曖昧，根據個人感覺、年代別對「稍微」的範圍認知可能會有所差異，使用上時需要小心。</p>
     </div>
     <div id="006">
-      <h2>加減</h2>
-      <p></p>
+      <h2>加減（かげん）</h2>
+        <p>用法:名詞/動詞ます形 + <b>加減</b> = 表示事物程度</p>
+        <p>例:焼き加減(煎烤的程度)、塩加減がいい(鹹度剛好)、火加減(火候)</p>
     </div>
     <div id="005"></div>
-    <div id="004"></div>
+      <h2>扱い（あつかい）</h2>
+        <p>用法:名詞(身分、作用、狀態) + <b>扱い</b> = 當作…對待</p>
+        <p>例:子供扱い(當作小孩對待)、機密扱い(當作機密對待)、欠席扱い(當作缺席對待)</p>
+    <div id="004">
+      <h2>上がり（あがり）</h2>
+        <p>用法:名詞/動詞ます形 + <b>上がり</b> = 表示狀態剛結束沒多久</p>
+        <p>例:病み上がり(大病初癒)、雨上がり(雨過天青)、風呂上がり(剛出浴)</p>
+    </div>
     <div id="003"></div>
+      <h2>音痴（おんち）</h2>
+        <p>用法:名詞 + <b>音痴</b> = 表示在某件事上遲鈍</p>
+        <p>例:運動音痴(運動白痴)、方向音痴(路痴)、機械音痴(機器白痴)</p>
     <div id="002"></div>
-    <div id="001"></div>
+      <h2>たて</h2>
+        <p>用法:動詞ます形 + <b>たて</b> = 表示動作剛結束</p>
+        <p>例:焼きたて(剛烤好)、炊き立てご飯(剛煮好的飯)、出来立ての料理(剛做好的料理)</p>
+    <div id="001">
+      <h2>心地（ここち）</h2>
+        <p>用法:動詞ます形 + <b>心地</b> = …的感覺</p>
+        <p>例:住み心地(住起來的感覺)、着心地(穿起來的感覺)、座り心地(坐起來的感覺)</p>
+        <p>*注意:當作接尾詞時發音為「ごこち」。</p>
+    </div>
   </div>
 </body>
 
