--- a/wordDifference.html
+++ b/wordDifference.html
@@ -6,39 +6,54 @@
 </head>
 <body>
   <h1>看差異學日文</h1>
+  <a href="https://www.instagram.com/japanese_h2o/"><img src="./resources/igIcon.png"></a>
 
  <!-- index -->
  <div>
   <p>索引</p>
-  <div id="list">
-  <ul>
-    <li><a href="#008">転ぶ・躓く</a></li> 
-    <li><a href="#007">治す・癒す</a></li>
-    <li><a href="#006">集う・集まる</a></li>
-    <li><a href="#005">確か・確かに</a></li>
-    <li><a href="#004">温かい・温い</a></li>
-    <li><a href="#003">冷める・冷える</a></li>
-    <li><a href="#002">利益・ご利益</a></li>
-    <li><a href="#001">我慢・辛抱</a></li>
-    <li><a href="#008">日にち・日付</a></li> 
-    <li><a href="#007">重い・重たい</a></li>
-    <li><a href="#006">徹夜・夜更かし</a></li>
-    <li><a href="#005">側・横・隣</a></li>
-    <li><a href="#004">済む・終わる</a></li>
-    <li><a href="#003">大抵・大体</a></li>
-    <li><a href="#002">勘違い・間違い</a></li>
-    <li><a href="#001">止む・止まる</a></li>
-    <li><a href="#008">大分・随分</a></li> 
-    <li><a href="#007">教える・教わる</a></li>
-  </ul>
-  </div>
+  <nav id="list">
+   <ul>
+    <li><a href="#018">転ぶ & 躓く</a></li> 
+    <li><a href="#017">治す & 癒す</a></li>
+    <li><a href="#016">集う & 集まる</a></li>
+    <li><a href="#015">確か & 確かに</a></li>
+    <li><a href="#014">温かい & 温い</a></li>
+    <li><a href="#013">冷める & 冷える</a></li>
+    <li><a href="#012">利益 & ご利益</a></li>
+    <li><a href="#011">我慢 & 辛抱</a></li>
+    <li><a href="#010">日にち & 日付</a></li> 
+    <li><a href="#009">重い & 重たい</a></li>
+    <li><a href="#008">徹夜 & 夜更かし</a></li>
+    <li><a href="#007">側 & 横 & 隣</a></li>
+    <li><a href="#006">済む & 終わる</a></li>
+    <li><a href="#005">大抵 & 大体</a></li>
+    <li><a href="#004">勘違い & 間違い</a></li>
+    <li><a href="#003">止む & 止まる</a></li>
+    <li><a href="#002">大分 & 随分</a></li> 
+    <li><a href="#001">教える & 教わる</a></li>
+   </ul>
+  </nav>
 </div>
 
-  <!-- Pictures -->
-  <div class="box">
+<!-- Pictures -->
+<div class="box" id="picture">
+  <div id="018">
+    <h2>転ぶ（ころぶ） & 躓く（つまずく）</h2>
+      <p><b>転ぶ</b>:身體因失去重心而倒下。</p><p>例：雪道で滑って転んだ。</p>
+      <p><b>躓く</b>:腳尖絆到東西而腳步踉蹌。</p><p>例：石に躓いて転ぶ。</p>
+  <div id="017">
+    <h2>治す（なおす） & 癒す（いやす）</h2>
+      <p><b>治す</b>:用在身體上。將疾病、傷痛治療恢復。</p><p>例：虫歯を1日でも早く治しない。</p>
+      <p><b>癒す</b>:可用在身體上或心理上。將苦痛治癒或減緩。</p><p>例：傷ついた心を癒す。</p>
+  <div id="016">
+    <h2>集う（つどう） & 集まる（あつまる）</h2>
+      <p><b>集う</b>:文章、正式用語。人們為了某目的而聚集在一場所，主體只能是人，用法較限定。</p><p>例：研究者が集う学会を開催する。</p>
+      <p><b>集まる</b>:一般日常用語。主體可以是人、動物、或事物。</p><p>例：彼に対して同情の声が集まった。</p>
+    
+  </div>
    
   
-  </div>
+</div>
 
 </body>
 
