--- a/wordOrigin.html
+++ b/wordOrigin.html
@@ -7,6 +7,7 @@
 <body>
 
   <h2>看語源學日文</h2>
+  <a href="https://www.instagram.com/japanese_h2o/"><img src="./resources/igIcon.png"></a>
 
    <!-- index -->
    <p>索引</p>
