--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="box">
-    <img id="pic" src="resources/五十音.PNG">
+    <img id="pic" src="resources/五十音.PNG" alt="日文五十音表">
   </div>
 
 </body>
