--- a/wordDifference.html
+++ b/wordDifference.html
@@ -49,7 +49,10 @@
     <h2>集う（つどう） & 集まる（あつまる）</h2>
       <p><b>集う</b>:文章、正式用語。人們為了某目的而聚集在一場所，主體只能是人，用法較限定。</p><p>例：研究者が集う学会を開催する。</p>
       <p><b>集まる</b>:一般日常用語。主體可以是人、動物、或事物。</p><p>例：彼に対して同情の声が集まった。</p>
-    
+  <div id="015">
+    <h2>確か（たしか） & 確かに（たしかに）</h2>
+      <p><b>確か</b>:根據可靠的判斷所做出的推測。</p><p>例：確かクーポンで買えると思うんですけど。</p>
+      <p><b>確かに</b>:100%的確定。</p><p>例：その書類を確かに受け取りました。</p>  
   </div>
    
   
