--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Link Section -->
   <div class="box">
       <h2 id="subtitle"><a href=wordOrigin.html>看語源學日文</a></h2>
-      <h2 id="subtitle"><a href=wordDifference.html>看差異學日文</a></h2>
+      <h2 id="subtitle"><a href="wordDifference/wordDifference.html">看差異學日文</a></h2>
       <h2 id="subtitle"><a href=wordCompose.html>看複合語學日文</a></h2>
   </div>
 
