--- a/wordDifference/wordDifference.html
+++ b/wordDifference/wordDifference.html
@@ -17,11 +17,11 @@
     <li><a href="wordDifference017.html">治す & 癒す</a></li>
     <li><a href="wordDifference016.html">集う & 集まる</a></li>
     <li><a href="wordDifference015.html">確か & 確かに</a></li>
-    <li><a href="#014">温かい & 温い</a></li>
-    <li><a href="#013">冷める & 冷える</a></li>
-    <li><a href="#012">利益 & ご利益</a></li>
-    <li><a href="#011">我慢 & 辛抱</a></li>
-    <li><a href="#010">日にち & 日付</a></li> 
+    <li><a href="wordDifference014.html">温かい & 温い</a></li>
+    <li><a href="wordDifference013.html">冷める & 冷える</a></li>
+    <li><a href="wordDifference012.html">利益 & ご利益</a></li>
+    <li><a href="wordDifference011.html">我慢 & 辛抱</a></li>
+    <li><a href="wordDifference010.html">日にち & 日付</a></li> 
     <li><a href="#009">重い & 重たい</a></li>
     <li><a href="#008">徹夜 & 夜更かし</a></li>
     <li><a href="#007">側 & 横 & 隣</a></li>
