--- a/wordDifference/wordDifference015.html
+++ b/wordDifference/wordDifference015.html
@@ -15,8 +15,8 @@
   <!-- Contents -->
     <div class="main">
         <h2>確か（たしか） & 確かに（たしかに）</h2>
-        <p><b>確か</b>:根據可靠的判斷所做出的推測。</p><p>例：確かクーポンで買えると思うんですけど。</p>
-        <p><b>確かに</b>:100%的確定。</p><p>例：その書類を確かに受け取りました。</p>  
+        <p><b>確か</b>:確實好像是。根據可靠的判斷所做出的推測。</p><p>例：確かクーポンで買えると思うんですけど。</p>
+        <p><b>確かに</b>:的確、確實。100%的確定。</p><p>例：その書類を確かに受け取りました。</p>  
     </div>
  
   <!-- Navs -->
