--- a/wordDifference/wordDifference016.html
+++ b/wordDifference/wordDifference016.html
@@ -15,8 +15,8 @@
   <!-- Contents -->
     <div class="main">
         <h2>集う（つどう） & 集まる（あつまる）</h2>
-        <p><b>集う</b>:文章、正式用語。人們為了某目的而聚集在一場所，主體只能是人，用法較限定。</p><p>例：研究者が集う学会を開催する。</p>
-        <p><b>集まる</b>:一般日常用語。主體可以是人、動物、或事物。</p><p>例：彼に対して同情の声が集まった。</p>
+        <p><b>集う</b>:集會。文章、正式用語。人們為了某目的而聚集在一場所，主體只能是人，用法較限定。</p><p>例：研究者が集う学会を開催する。</p>
+        <p><b>集まる</b>:聚集。一般日常用語。主體可以是人、動物、或事物。</p><p>例：彼に対して同情の声が集まった。</p>
     </div>
  
   <!-- Navs -->
