--- a/wordDifference/wordDifference018.html
+++ b/wordDifference/wordDifference018.html
@@ -15,8 +15,8 @@
   <!-- Contents -->
     <div class="main">
       <h2>転ぶ（ころぶ） & 躓く（つまずく）</h2>
-      <p><b>転ぶ</b>:身體因失去重心而倒下。</p><p>例：雪道で滑って転んだ。</p>
-      <p><b>躓く</b>:腳尖絆到東西而腳步踉蹌。</p><p>例：石に躓いて転ぶ。</p>
+      <p><b>転ぶ</b>:跌倒。身體因失去重心而倒下。</p><p>例：雪道で滑って転んだ。</p>
+      <p><b>躓く</b>:絆。腳尖絆到東西而腳步踉蹌。</p><p>例：石に躓いて転ぶ。</p>
     </div>
  
   <!-- Navs -->
