--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
   <!-- Link Section -->
   <div>
-    <p>人生無一刻不在變動，在浮沉世間追尋平衡</p>
+    <p>在浮沉世間追尋平衡</p>
     <p>道道生活的兩三事，感受生命的獨一性</p>
   </div>
 
   <!-- Link Section -->
   <div class="box">
-      <h2 id="subtitle"><a href=wordOrigin.html>看語源學日文</a></h2>
+      <h2 id="subtitle"><a href="wordOrigin/wordOrigin.html">看語源學日文</a></h2>
       <h2 id="subtitle"><a href="wordDifference/wordDifference.html">看差異學日文</a></h2>
-      <h2 id="subtitle"><a href=wordCompose.html>看複合語學日文</a></h2>
+      <h2 id="subtitle"><a href="wordCompose/wordCompose.html">看複合語學日文</a></h2>
   </div>
 
   <div class="box">
