--- a/wordDifference/wordDifference.html
+++ b/wordDifference/wordDifference.html
@@ -4,7 +4,9 @@
   <title>看差異學日文</title>
   <link href="../pageStyle.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
+  <a href="../index.html">回首頁</a>
   <h1>看差異學日文</h1>
   <a href="https://www.instagram.com/japanese_h2o/"><img src="../resources/igIcon.png"></a>
 
@@ -22,15 +24,15 @@
     <li><a href="wordDifference012.html">利益 & ご利益</a></li>
     <li><a href="wordDifference011.html">我慢 & 辛抱</a></li>
     <li><a href="wordDifference010.html">日にち & 日付</a></li> 
-    <li><a href="#009">重い & 重たい</a></li>
-    <li><a href="#008">徹夜 & 夜更かし</a></li>
-    <li><a href="#007">側 & 横 & 隣</a></li>
-    <li><a href="#006">済む & 終わる</a></li>
-    <li><a href="#005">大抵 & 大体</a></li>
-    <li><a href="#004">勘違い & 間違い</a></li>
-    <li><a href="#003">止む & 止まる</a></li>
-    <li><a href="#002">大分 & 随分</a></li> 
-    <li><a href="#001">教える & 教わる</a></li>
+    <li><a href="wordDifference009.html">重い & 重たい</a></li>
+    <li><a href="wordDifference008.html">徹夜 & 夜更かし</a></li>
+    <li><a href="wordDifference007.html">側 & 横 & 隣</a></li>
+    <li><a href="wordDifference006.html">済む & 終わる</a></li>
+    <li><a href="wordDifference005.html">大抵 & 大体</a></li>
+    <li><a href="wordDifference004.html">勘違い & 間違い</a></li>
+    <li><a href="wordDifference003.html">止む & 止まる</a></li>
+    <li><a href="wordDifference002.html">大分 & 随分</a></li> 
+    <li><a href="wordDifference001.html">教える & 教わる</a></li>
    </ul>
   </nav>
 </div>
