--- a/wordOrigin/wordOrigin007.html
+++ b/wordOrigin/wordOrigin007.html
@@ -17,7 +17,7 @@
 
     <div class="main">
         <h2>安堵（あんど）</h2>
-        <b>意思:從不安的情緒中解消</b>
+        <h3>意思:從不安的情緒中解消</h3>
         <p>「堵」是圍牆的意思。鎌倉幕府-寶町時代，幕府、領主對被其統治者土地所有權的承認，叫做「本領安堵」。</P>
         <P>安堵原本是指在圍牆內的土地，安全生活的意思。近世以後，隨著土地制度的改變，現用為心理上的安心感。</p>
     </div>
