--- a/wordOrigin/wordOrigin011.html
+++ b/wordOrigin/wordOrigin011.html
@@ -17,7 +17,7 @@
 
     <div class="main">
         <h2>テンパる</h2>
-        <b>意思:心情慌亂感到焦頭爛額</b>
+        <h3>意思:心情慌亂感到焦頭爛額</h3>
         <p>日本麻將聽牌（テンパイ）的動詞化。指準備好差一步成功之際，達到最大限度的狀態。</p>
         <p>「テンパる」表示達到最大限度，沒有從容餘地之意，衍生為內心感到焦頭爛額。</p>
     </div>
