--- a/wordOrigin/wordOrigin014.html
+++ b/wordOrigin/wordOrigin014.html
@@ -17,7 +17,7 @@
 
     <div class="main">
         <h2>レンゲ</h2>
-        <b>意思:喝湯用的湯匙</b>
+        <h3>意思:喝湯用的湯匙</h3>
         <p>「レンゲ」指蓮花。蓮花瓣稱為散蓮華（ちりれんげ）」。</p>
         <p>由於湯匙的形狀就像蓮花瓣一樣，因此也用ちりれんげ稱呼，レンゲ為省略語。</p>
     </div>
