--- a/wordOrigin/wordOrigin019.html
+++ b/wordOrigin/wordOrigin019.html
@@ -17,7 +17,7 @@
 
     <div class="main">
         <h2>お墨付き（おすみつき）</h2>
-        <b>意思:被權威人士所認證的東西</b>
+        <h3>意思:被權威人士所認證的東西</h3>
         <p>寶町和江戶時代時，幕府將軍、大名等賜給臣子的領地後做為證明的確認文書。文書上的署名、記號用墨記入。</p>
         <p>現用指權威人士認可的東西。</p>
     </div>
