--- a/wordOrigin/wordOrigin002.html
+++ b/wordOrigin/wordOrigin002.html
@@ -17,7 +17,7 @@
 
     <div class="main">
         <h2>問屋（とんや）</h2>
-        <b>意思:指從生產者、輸入商進貨，再批發給零售業者的商店或商人</b>
+        <h3>意思:指從生產者、輸入商進貨，再批發給零售業者的商店或商人<h3>
         <p>日本平安時代後期到鎌倉時代，為莊園領主在交通要港管理、輸送每年貢品的一種莊官職務叫做「問丸（といまる)」。</p>
 
         <p>鎌倉時代末期，問丸從事的工作漸漸更為多元，包括了在港口的年貢品的保管、輸送、交易的仲介、住宿地提供等。</p>
