--- a/wordOrigin/wordOrigin005.html
+++ b/wordOrigin/wordOrigin005.html
@@ -17,7 +17,7 @@
 
     <div class="main">
         <h2>ひいき</h2>
-        <b>意思:特別地偏愛、關照某人</b>
+        <h3>意思:特別地偏愛、關照某人</h3>
         <p>贔屓（ひいき）指用力的樣子。贔屓也是中國傳說中的龍生九子之一，形似龜，喜歡背負重物。</p>
         <p>日文衍生為特別關照某人。</p>
     </div>
