--- a/wordOrigin/wordOrigin009.html
+++ b/wordOrigin/wordOrigin009.html
@@ -17,7 +17,7 @@
 
     <div class="main">
         <h2>脇が甘い（わきがあまい）</h2>
-        <b>意思:不注意而讓對手有機可乘</b>
+        <h3>意思:不注意而讓對手有機可乘</h3>
         <p>原為相撲比賽中，將對手用腋下抵住的力道過弱，反讓對方有機可乘。衍生為注意警戒不足。</p>
     </div>
  
