--- a/wordOrigin/wordOrigin018.html
+++ b/wordOrigin/wordOrigin018.html
@@ -17,7 +17,7 @@
 
     <div class="main">
         <h2>コツ</h2>
-        <b>意思:事情的要領、秘訣</b>
+        <h3>意思:事情的要領、秘訣</h3>
         <p>「コツ」的漢字是「骨」。骨為用以支撐身體的中心，引申為物事的根本。</p>
         <p> 例:コツをつかむ (抓住事物的要領)</p>
     </div>
