--- a/wordOrigin/wordOrigin006.html
+++ b/wordOrigin/wordOrigin006.html
@@ -18,7 +18,8 @@
     <div class="main">
         <h2>黒字（くろじ）</h2>
         <h3>意思:收入大於支出</h3>
-        <p>日本的會計記帳中，決算後若利益大於損失的話用黑色記入。</p>
+        <p>日本的會計記帳中，決算後若利益大於損失的話會用黑色記入。</p>
+        <p></p>
     </div>
  
   <!-- Navs -->
