--- a/wordOrigin/wordOrigin009.html
+++ b/wordOrigin/wordOrigin009.html
@@ -18,7 +18,8 @@
     <div class="main">
         <h2>脇が甘い（わきがあまい）</h2>
         <h3>意思:不注意而讓對手有機可乘</h3>
-        <p>原為相撲比賽中，將對手用腋下抵住的力道過弱，反讓對方有機可乘。衍生為注意警戒不足。</p>
+        <p>原為相撲比賽中，將對手用腋下抵住的力道過弱，反讓對方有機可乘。</p>
+        <p>衍生為注意警戒不足，而讓對手有機可乘。</p>
     </div>
  
   <!-- Navs -->
