--- a/wordOrigin/wordOrigin017.html
+++ b/wordOrigin/wordOrigin017.html
@@ -18,7 +18,8 @@
     <div class="main">
         <h2>二番煎じ（にばんせんじ）</h2>
         <h3>意思:了無新意的仿效</h3>
-        <p>指將煎煮過一次的茶、藥等，再拿來煎煮一次，味道變得淡薄。衍生為老調重彈，沒有新鮮感。</p>
+        <p>指將煎煮過一次的茶、藥等，再拿來煎煮一次，味道變得淡薄。</p>
+        <p>衍生為老調重彈，沒有新鮮感。</p>
     </div>
  
   <!-- Navs -->
