--- a/wordOrigin/wordOrigin016.html
+++ b/wordOrigin/wordOrigin016.html
@@ -19,8 +19,7 @@
         <h2>案山子（かかし）</h2>
         <h3>意思:稻草人</h3>
         <p>日本古代將獸肉烤焦後，串起來立在地上，發出氣味讓鳥類嗅聞以驅趕的東西叫做「かかし」，是「嗅がし（かがし）」的清音化，後以稻草製作的人形也稱為かかし。</p>
-        <p>漢字「案山子」由來為中國僧侶傳入，「案山」是山中上部平緩如案几的低矮小山，「子」是人形。低山之間有耕作，設人形以驅鳥，故稱案山子。
-        </p>
+        <p>漢字「案山子」由來為中國僧侶傳入，「案山」是山中上部平緩如案几的低矮小山，「子」是人形。低山之間有耕作，設人形以驅鳥，故稱案山子。</p>
     </div>
  
   <!-- Navs -->
