--- a/wordOrigin/wordOrigin003.html
+++ b/wordOrigin/wordOrigin003.html
@@ -18,8 +18,8 @@
     <div class="main">
         <h2>へそくり</h2>
         <h3>意思:私房錢</h3>
-        <p>「臍繰り金（へそくりがね）」的省略語。</p>
-        <p> 原意為纏繞麻線球=綜麻（へそ）攢下存起來的錢「綜麻繰り金（へそくりがね）」。後來因為「綜麻（へそ）」和「臍（へそ）」同音而混同在一起。</p>
+        <p>「臍繰り金（へそくりがね）」的省略語。<br>
+        原意為纏繞麻線球=綜麻（へそ）攢下存起來的錢「綜麻繰り金（へそくりがね）」。後來因為「綜麻（へそ）」和「臍（へそ）」同音而混同在一起。</p>
     </div>
  
   <!-- Navs -->
