--- a/wordOrigin/wordOrigin004.html
+++ b/wordOrigin/wordOrigin004.html
@@ -18,8 +18,8 @@
     <div class="main">
         <h2>たらい回し（たらいまわし）</h2>
         <h3>意思:層層推卸麻煩的事情</h3>
-        <p>是一種面向上橫躺著將盥（たらい）=木洗臉盆，用腳互相傳遞的民俗雜技。</p>
-        <p>後衍生為麻煩事情的互相卸責，現在常用於病人被醫院間推託轉送。</p>
+        <p>是一種面向上橫躺著將盥（たらい）=木洗臉盆，用腳互相傳遞的民俗雜技。<br>
+        後衍生為麻煩事情的互相卸責，現在常用於病人被醫院間推託轉送。</p>
     </div>
  
   <!-- Navs -->
