--- a/wordOrigin/wordOrigin008.html
+++ b/wordOrigin/wordOrigin008.html
@@ -18,8 +18,8 @@
     <div class="main">
         <h2>瀬戸際（せとぎわ）</h2>
         <h3>意思:物事成否的重要分歧點</h3>
-        <p>「瀬戸」原做「狭門（せと）」，指兩側的陸地收縮，海變得狹窄的地方，後被表記為「瀬戸」。「際」為分界點的意思。合起來為狹窄的海峽跟海的分界點。</p>
-        <p>後衍生為物事的重要分歧點。</P>
+        <p>「瀬戸」原做「狭門（せと）」，指兩側的陸地收縮，海變得狹窄的地方，後被表記為「瀬戸」。「際」為分界點的意思。合起來為狹窄的海峽跟海的分界點。<br>
+        後衍生為物事的重要分歧點。</P>
     </div>
  
   <!-- Navs -->
