--- a/wordOrigin/wordOrigin010.html
+++ b/wordOrigin/wordOrigin010.html
@@ -18,8 +18,8 @@
     <div class="main">
         <h2>つまらない</h2>
         <h3>意思:無趣</h3>
-        <p>詰まる（つまる）動詞的否定形。「詰まる」有物事的結局之意。</p>
-        <p>「つまらない」為沒有結局定論，被用來形容覺得無趣。</p>
+        <p>詰まる（つまる）動詞的否定形。「詰まる」有物事的結局之意。<br>
+        「つまらない」為沒有結局定論，被用來形容覺得無趣。</p>
     </div>
  
   <!-- Navs -->
