--- a/wordOrigin/wordOrigin015.html
+++ b/wordOrigin/wordOrigin015.html
@@ -18,8 +18,8 @@
     <div class="main">
         <h2>雀の涙（すずめのなみだ）</h2>
         <h3>意思:少到讓人心酸的量</h3>
-        <p>「スズ」一說為鳥鳴聲；一說為「ササ」小的意思轉變而來。「メ」是小鳥的接尾語或指獸群。</p>
-        <p>「ズズメ」本身有小的意思，因此「雀の涙」用來形容極少的量。</p>
+        <p>「スズ」一說為鳥鳴聲；一說為「ササ」小的意思轉變而來。「メ」是小鳥的接尾語或指獸群。<br>
+        「ズズメ」本身有小的意思，因此「雀の涙」用來形容極少的量。</p>
     </div>
  
   <!-- Navs -->
