--- a/wordOrigin/wordOrigin012.html
+++ b/wordOrigin/wordOrigin012.html
@@ -18,8 +18,8 @@
     <div class="main">
         <h2>しょぼい</h2>
         <h3>意思:比預想中簡陋寒愴的情形</h3>
-        <p>江戶時代「しょぼしょぼ」用來描述小雨不斷降下，微弱陰暗、沒力氣的樣子。</p>
-        <p>「しょぼい」為「しょぼしょぼ」的形容詞化。</p>
+        <p>江戶時代「しょぼしょぼ」用來描述小雨不斷降下，微弱陰暗、沒力氣的樣子。<br>
+        「しょぼい」為「しょぼしょぼ」的形容詞化。</p>
     </div>
  
   <!-- Navs -->
