--- a/wordOrigin/wordOrigin013.html
+++ b/wordOrigin/wordOrigin013.html
@@ -18,8 +18,8 @@
     <div class="main">
         <h2>出張（しゅっちょう）</h2>
         <h3>意思:出差</h3>
-        <p>原為戰爭用語。戰時出發前往他處設營地稱做「出張リ（でばリ）」，後改為音讀「しゅっちょう」。</p>
-        <p>明治時期開始用於工作上時的出差。</p>
+        <p>原為戰爭用語。戰時出發前往他處設營地稱做「出張リ（でばリ）」，後改為音讀「しゅっちょう」。<br>
+        明治時期開始用於工作上時的出差。</p>
     </div>
  
   <!-- Navs -->
