--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <a href="https://www.instagram.com/japanese_h2o/"><img src="./resources/igIcon.png"></a>
 
   <!-- Link Section -->
-  <div>
+  <div id="preface">
     <p>在浮沉世間追尋平衡</p>
     <p>道道生活的兩三事，感受生命的獨一性</p>
   </div>
@@ -23,7 +23,7 @@
       <h2 id="subtitle"><a href="wordCompose/wordCompose.html">看複合語學日文</a></h2>
   </div>
 
-  <div class="box">
+  <div>
     <img id="pic" src="resources/五十音.PNG" alt="日文五十音表">
   </div>
 
