--- a/wordCompose/wordCompose007.html
+++ b/wordCompose/wordCompose007.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>複合語:~強/弱</title>
+    <title>日文複合語:~強/弱</title>
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
   </head>
 
