--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>日文小聚落</title>
   <meta name="google-site-verification" content="WRIGwwagdGNL9kugmhQuKxRNy_BTf5T7LznHYCBPlDA" />
   <link href="./style.css" type="text/css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 
