--- a/wordCompose/wordCompose002.html
+++ b/wordCompose/wordCompose002.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文複合語:~たて</title>
+    <title>日文複合語:~たて的用法</title>
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
   </head>
 
