--- a/wordCompose/wordCompose005.html
+++ b/wordCompose/wordCompose005.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文複合語:~扱い</title>
+    <title>日文複合語:~扱い的用法</title>
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
   </head>
 
