--- a/wordDifference/wordDifference014.html
+++ b/wordDifference/wordDifference014.html
@@ -16,7 +16,7 @@
     <div class="main">
         <h2>温かい（あたたかい） & 温い（ぬるい）</h2>
         <p><b>温かい</b>:溫熱。不會過熱也不會過冷，適切的溫度。&#128522</p><p>例：寒い冬は温かいスープが飲みたい。</p>
-        <p><b>温い</b>:微溫。不夠熱或不夠冷，令人感到不舒服的溫度。一般只用於液體。&#128532</p><p>例：温くなったビールは美味しくない。</p>  
+        <p><b>温い</b>:微溫。一般只用於液體。不夠熱或不夠冷，令人感到不舒服的溫度。&#128532</p><p>例：温くなったビールは美味しくない。</p>  
     </div>
  
   <!-- Navs -->
