--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <img id="pic" src="resources/五十音.PNG" alt="日文五十音表">
   </div>
 
+  <div class="container">
+    <h2>今日の言葉</h2>
+    <h3>伸び代（のびしろ）：成長空間</h3>
+  </div>
+
 </body>
 
 <footer>
