--- a/wordOrigin/wordOrigin020.html
+++ b/wordOrigin/wordOrigin020.html
@@ -18,7 +18,7 @@
     <div class="main">
         <h2>太刀打ち（たちうち）</h2>
         <h3>意思:互相競爭較量</h3>
-        <p>指用日本太刀互相對戰。衍生為兩方互相競爭較量。<br>
+        <p>「太刀打ち」指用日本太刀互相對戰。衍生為兩方互相競爭較量。<br>
         例:太刀打ちできない(實力差距過大，無法做為對手競爭)</p>
     </div>
  
