--- a/wordOrigin/wordOrigin016.html
+++ b/wordOrigin/wordOrigin016.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文「案山子」的語源</title>
+    <title>為什麼日文這樣說-「案山子」</title>
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
   </head>
 
