--- a/wordOrigin/wordOrigin018.html
+++ b/wordOrigin/wordOrigin018.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文「コツ」的語源</title>
+    <title>為什麼日文這樣說-「コツ」</title>
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
   </head>
 
