--- a/wordOrigin/wordOrigin019.html
+++ b/wordOrigin/wordOrigin019.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文「お墨付き」的語源</title>
+    <title>為什麼日文這樣說-「お墨付き」</title>
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
   </head>
 
@@ -18,8 +18,8 @@
     <div class="main">
         <h2>お墨付き（おすみつき）</h2>
         <h3>意思:被權威人士所認證的東西</h3>
-        <p>寶町和江戶時代時，幕府將軍、大名等賜給臣子的領地後做為證明的確認文書。文書上的署名、記號用墨記入。<br>
-        現用指權威人士認可的東西。</p>
+        <p>由於寶町和江戶時代時，幕府將軍、大名等賜給臣子的領地後做為證明的確認文書。在文書上的署名、記號會用墨記入。<br>
+          「お墨付き」現用來指權威人士認可的東西。</p>
     </div>
  
   <!-- Navs -->
