--- a/wordOrigin/wordOrigin020.html
+++ b/wordOrigin/wordOrigin020.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文「太刀打ち」的語源</title>
+    <title>為什麼日文這樣說-「太刀打ち」</title>
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
   </head>
 
@@ -18,7 +18,7 @@
     <div class="main">
         <h2>太刀打ち（たちうち）</h2>
         <h3>意思:互相競爭較量</h3>
-        <p>「太刀打ち」指用日本太刀互相對戰。衍生為兩方互相競爭較量。<br><br>
+        <p>「太刀打ち」是指用日本太刀互相對戰。衍生為兩方互相競爭較量。<br><br>
         例：太刀打ちできない(實力差距過大，無法做為對手競爭)</p>
     </div>
  
