--- a/wordOrigin/wordOrigin017.html
+++ b/wordOrigin/wordOrigin017.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文「二番煎じ」的語源</title>
+    <title>為什麼日文這樣說-「二番煎じ」</title>
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
   </head>
 
