--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>日文小聚落</title>
   <meta name="google-site-verification" content="WRIGwwagdGNL9kugmhQuKxRNy_BTf5T7LznHYCBPlDA" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" >
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link href="./style.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap" rel="stylesheet">
 </head>
