--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
   <!-- Link Section -->
   <div class="box">
-      <h2 id="subtitle"><a href="wordOrigin/wordOrigin.html">看語源學日文</a></h2>
-      <h2 id="subtitle"><a href="wordDifference/wordDifference.html">看差異學日文</a></h2>
-      <h2 id="subtitle"><a href="wordCompose/wordCompose.html">看複合語學日文</a></h2>
+      <p id="subtitle"><a href="wordOrigin/wordOrigin.html">看語源學日文</a></p>
+      <p id="subtitle"><a href="wordDifference/wordDifference.html">看差異學日文</a></p>
+      <p id="subtitle"><a href="wordCompose/wordCompose.html">看複合語學日文</a></p>
   </div>
 
   <div>
