--- a/wordOrigin/wordOrigin.html
+++ b/wordOrigin/wordOrigin.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>看語源學日文</title>
+  <meta name="google-site-verification" content="WRIGwwagdGNL9kugmhQuKxRNy_BTf5T7LznHYCBPlDA" />
   <meta name="viewport" content="width=device-width, initial-scale=1" >
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link href="../pageStyle.css" type="text/css" rel="stylesheet">
