--- a/wordCompose/wordCompose002.html
+++ b/wordCompose/wordCompose002.html
@@ -3,6 +3,8 @@
 
   <head>
     <title>日文複合語:~たて的用法</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
   </head>
 
