--- a/wordDifference/wordDifference016.html
+++ b/wordDifference/wordDifference016.html
@@ -3,6 +3,8 @@
 
   <head>
     <title>集う、集まる的差異</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
   </head>
 
