--- a/wordOrigin/wordOrigin013.html
+++ b/wordOrigin/wordOrigin013.html
@@ -3,6 +3,8 @@
 
   <head>
     <title>日文「出張」的語源</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
   </head>
 
