--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <!-- Link Section -->
   <div id="preface">
+    <p><em>About Me</p>
     <p>在浮沉世間追尋平衡</p>
     <p>道道生活的兩三事，感受生命的獨一性</p>
   </div>
