--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Nav Section -->
+  <div class="box">
+    <a href="wordOrigin/wordOrigin.html">看語源學日文</a>
+    <a href="wordDifference/wordDifference.html">看差異學日文</a>
+    <a href="wordCompose/wordCompose.html">看複合語學日文</a>
+  </div>
 
   <h1>日文小聚落</h1>
+
   <a href="https://www.instagram.com/japanese_h2o/"><img src="./resources/igIcon.png"></a>
 
-  <!-- Link Section -->
+  <!-- Info  Section -->
   <div id="preface">
     <p><em>About Me</p>
     <p>在浮沉世間追尋平衡</p>
     <p>道道生活的兩三事，感受生命的獨一性</p>
-  </div>
-
-  <!-- Link Section -->
-  <div class="box">
-      <p id="subtitle"><a href="wordOrigin/wordOrigin.html">看語源學日文</a></p>
-      <p id="subtitle"><a href="wordDifference/wordDifference.html">看差異學日文</a></p>
-      <p id="subtitle"><a href="wordCompose/wordCompose.html">看複合語學日文</a></p>
   </div>
 
   <div>
@@ -32,7 +32,7 @@
   </div>
 
   <div class="container">
-    <h3>今日の言葉</h2>
+    <h3>今週の言葉</h2>
     <h3>伸び代（のびしろ）：成長空間</h3>
   </div>
 
