--- a/index.html
+++ b/index.html
@@ -8,13 +8,26 @@
   <link href="./style.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <!-- Nav Section -->
-  <div class="box">
+
+  <div class="dropdown">
+    <button class="dropbtn">日文學習</button>
+    <div class="dropdown-content">
     <a href="wordOrigin/wordOrigin.html">看語源學日文</a>
     <a href="wordDifference/wordDifference.html">看差異學日文</a>
     <a href="wordCompose/wordCompose.html">看複合語學日文</a>
+    </div>
   </div>
+
+  <div class="dropdown">
+    <button class="dropbtn">日本雜談</button>
+    <div class="dropdown-content">
+    <a href="">主題</a>
+    </div>
+  </div>
+
 
   <h1>日文小聚落</h1>
 
