--- a/wordCompose/wordCompose.html
+++ b/wordCompose/wordCompose.html
@@ -17,6 +17,12 @@
   <p>索引</p>
   <nav id="list">
     <ul>
+      <li><a href="wordCompose014.html">尽くす</a></li>
+      <li><a href="wordCompose013.html">党</a></li>
+      <li><a href="wordCompose012.html">まくる</a></li>
+      <li><a href="wordCompose011.html">まがい</a></li> 
+      <li><a href="wordCompose010.html">深い</a></li> 
+      <li><a href="wordCompose009.html">屋</a></li> 
       <li><a href="wordCompose008.html">放題</a></li> 
       <li><a href="wordCompose007.html">強/弱</a></li>
       <li><a href="wordCompose006.html">加減</a></li>
