--- a/wordCompose/wordCompose001.html
+++ b/wordCompose/wordCompose001.html
@@ -18,9 +18,9 @@
     <div class="main">
         <h2>心地（ここち）</h2>
         <p>用法:動詞ます形 + <b>心地</b> = …的感覺</p>
-        <p>住み<b>心地</b>(住起來的感覺)</p>
-        <p>着<b>心地</b>(穿起來的感覺)</p>
-        <p>座り<b>心地</b>(坐起來的感覺)</p>
+        <p>．住み<b>心地</b>(住起來的感覺)</p>
+        <p>．着<b>心地</b>(穿起來的感覺)</p>
+        <p>．座り<b>心地</b>(坐起來的感覺)</p>
         <p>*注意:當作接尾詞時發音為「ごこち」。</p>
     </div>
  
