--- a/wordCompose/wordCompose002.html
+++ b/wordCompose/wordCompose002.html
@@ -18,9 +18,9 @@
     <div class="main">
         <h2>たて</h2>
         <p>用法:動詞ます形 + <b>たて</b> = 表示動作剛結束</p>
-        <p>焼き<b>たて</b>(剛烤好)</p>
-        <p>炊き<b>たて</b>ご飯(剛煮好的飯)</p>
-        <p>出来<b>たて</b>の料理(剛做好的料理)</p>
+        <p>．焼き<b>たて</b>(剛烤好)</p>
+        <p>．炊き<b>たて</b>ご飯(剛煮好的飯)</p>
+        <p>．出来<b>たて</b>の料理(剛做好的料理)</p>
     </div>
  
   <!-- Navs -->
