--- a/wordCompose/wordCompose003.html
+++ b/wordCompose/wordCompose003.html
@@ -18,9 +18,9 @@
     <div class="main">
         <h2>音痴（おんち）</h2>
         <p>用法:名詞 + <b>音痴</b> = 表示在某件事上遲鈍</p>
-        <p>運動<b>音痴</b>(運動白痴)</p>
-        <p>方向<b>音痴</b>(路痴)</p>
-        <p>機械<b>音痴</b>(機器白痴)</p>
+        <p>．運動<b>音痴</b>(運動白痴)</p>
+        <p>．方向<b>音痴</b>(路痴)</p>
+        <p>．機械<b>音痴</b>(機器白痴)</p>
     </div>
  
   <!-- Navs -->
