--- a/wordCompose/wordCompose004.html
+++ b/wordCompose/wordCompose004.html
@@ -18,9 +18,9 @@
     <div class="main">
         <h2>上がり（あがり）</h2>
         <p>用法:名詞/動詞ます形 + <b>上がり</b> = 表示狀態剛結束沒多久</p>
-        <p>病み<b>上がり</b>(大病初癒)</p>
-        <p>雨<b>上がり</b>(雨過天青)</p>
-        <p>風呂<b>上がり</b>(剛出浴)</p>   
+        <p>．病み<b>上がり</b>(大病初癒)</p>
+        <p>．雨<b>上がり</b>(雨過天青)</p>
+        <p>．風呂<b>上がり</b>(剛出浴)</p>   
     </div>
  
   <!-- Navs -->
