--- a/wordCompose/wordCompose006.html
+++ b/wordCompose/wordCompose006.html
@@ -18,9 +18,9 @@
     <div class="main">
         <h2>加減（かげん）</h2>
         <p>用法:名詞/動詞ます形 + <b>加減</b> = 表示事物程度</p>
-        <p>焼き<b>加減</b>(煎烤的程度)
-        <p>塩<b>加減</b>がいい(鹹度剛好)</p>
-        <p>火<b>加減</b>(火候)</p>
+        <p>．焼き<b>加減</b>(煎烤的程度)
+        <p>．塩<b>加減</b>がいい(鹹度剛好)</p>
+        <p>．火<b>加減</b>(火候)</p>
     </div>
  
   <!-- Navs -->
