--- a/wordCompose/wordCompose007.html
+++ b/wordCompose/wordCompose007.html
@@ -18,8 +18,8 @@
     <div class="main">
         <h2>強（きょう）/弱（じゃく）</h2>
         <p>用法:數量詞 + <b>強/弱</b> = 表示比某數量稍微多/少一些 (去掉尾數時使用)</p>
-        <p>8割<b>強</b>(8成多左右)</p>
-        <p>2年<b>弱</b>(將近2年)</p>
+        <p>．8割<b>強</b>(8成多左右)</p>
+        <p>．2年<b>弱</b>(將近2年)</p>
         <p>*注意:此用法較為曖昧，根據個人感覺、年代別對「稍微」的範圍認知可能會有所差異，使用上時需要小心。</p>
     </div>
  
