--- a/wordCompose/wordCompose008.html
+++ b/wordCompose/wordCompose008.html
@@ -18,9 +18,9 @@
     <div class="main">
       <h2>放題（ほうだい）</h2>
       <p>用法:名詞/動詞ます形/形容動詞語幹/たい + <b>放題</b> = 表示恣意地從事某行為</p>
-      <p>食べ<b>放題</b>(吃到飽)
-      <p>10分かけ<b>放題</b>(前10分鐘內通話免費)</p>
-      <p>言いたい<b>放題</b>(自顧自地說)</p>
+      <p>．食べ<b>放題</b>(吃到飽)
+      <p>．10分かけ<b>放題</b>(前10分鐘內通話免費)</p>
+      <p>．言いたい<b>放題</b>(自顧自地說)</p>
     </div>
  
   <!-- Navs -->
