--- a/wordCompose/wordCompose012.html
+++ b/wordCompose/wordCompose012.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文複合語:~扱い的用法</title>
+    <title>日文複合語:~まくる的用法</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,19 +16,19 @@
    
   <!-- Contents -->
     <div class="main">
-        <h2>扱い（あつかい）</h2>
-        <p>用法:名詞(身分、作用、狀態) + <b>扱い</b> = 當作…對待</p>
-        <p>．子供<b>扱い</b>(當作小孩對待)</p>
-        <p>．機密<b>扱い</b>(當作機密對待)</p>
-        <p>．欠席<b>扱い</b>(當作缺席對待)</p>
+      <h2>まくる</h2>
+      <p>用法:動詞ます形 + <b>まくる</b> = 表示高強度地持續做某動作</p>
+      <p>．今夜は食べ<b>まくろう</b>(今晚大吃一番吧)
+      <p>．写真を撮り<b>まくる</b>(拼命地狂拍照)</p>
+      <p>．ミスし<b>まくる</b>(不斷狂犯錯)</p>
     </div>
  
   <!-- Navs -->
     <nav>
     <ul>
-      <li><a rel="prev" href="wordCompose006.html">看上一篇</a></li>
+      <li><a rel="prev" href="wordCompose.html">看上一篇</a></li>
       <li><a rel="prev" href="wordCompose.html">索引</a></li>
-      <li><a rel="prev" href="wordCompose004.html">看下一篇</a></li>
+      <li><a rel="prev" href="wordCompose011.html">看下一篇</a></li>
     </ul>
     </nav>
 
