--- a/wordDifference/wordDifference.html
+++ b/wordDifference/wordDifference.html
@@ -17,6 +17,11 @@
   <p>索引</p>
   <nav id="list">
    <ul>
+    <li><a href="wordDifference023.html">歩む & 歩く</a></li> 
+    <li><a href="wordDifference022.html">蹲る & しゃがむ</a></li> 
+    <li><a href="wordDifference021.html">促す & 急かす</a></li> 
+    <li><a href="wordDifference020.html">避ける & 避ける</a></li> 
+    <li><a href="wordDifference019.html">避ける & 躱す</a></li> 
     <li><a href="wordDifference018.html">転ぶ & 躓く</a></li> 
     <li><a href="wordDifference017.html">治す & 癒す</a></li>
     <li><a href="wordDifference016.html">集う & 集まる</a></li>
