--- a/wordDifference/wordDifference019.html
+++ b/wordDifference/wordDifference019.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>転ぶ、躓く的差異</title>
+    <title>避ける、躱す的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>転ぶ（ころぶ） & 躓く（つまずく）</h2>
-      <p><b>転ぶ</b>:跌倒。身體因失去重心而倒下。</p><p>例：雪道で滑って転んだ。</p>
-      <p><b>躓く</b>:絆。腳尖絆到東西而腳步踉蹌。</p><p>例：石に躓いて転ぶ。</p>
+      <h2>避ける（よける） & 躱す（かわす）</h2>
+      <p><b>避ける</b>:避開。描述下意識地避開對象物。</p><p>例：道ですれ違う時に左に避ける。</p>
+      <p><b>躱す</b>:閃躲。強調於身體瞬間閃躲的動作。</p><p>例：身を躱して自転車を避ける。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference019.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference020.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference017.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference018.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
