--- a/wordDifference/wordDifference020.html
+++ b/wordDifference/wordDifference020.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>転ぶ、躓く的差異</title>
+    <title>避ける（よける）、避ける（さける）的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>転ぶ（ころぶ） & 躓く（つまずく）</h2>
-      <p><b>転ぶ</b>:跌倒。身體因失去重心而倒下。</p><p>例：雪道で滑って転んだ。</p>
-      <p><b>躓く</b>:絆。腳尖絆到東西而腳步踉蹌。</p><p>例：石に躓いて転ぶ。</p>
+      <h2>避ける（よける） & 避ける（さける）</h2>
+      <p><b>避ける（よける）</b>:避開。用在物理上。下意識地避開對象物。</p><p>例：飛んできたボールは避けられない。</p>
+      <p><b>避ける（さける）</b>:迴避。可用在抽象上或物理上。有意識地遠離對象物。</p><p>例：騒音トラブルを避けることができる物件。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference019.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference021.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference017.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference019.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
