--- a/wordDifference/wordDifference021.html
+++ b/wordDifference/wordDifference021.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>転ぶ、躓く的差異</title>
+    <title>促す、急かす的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>転ぶ（ころぶ） & 躓く（つまずく）</h2>
-      <p><b>転ぶ</b>:跌倒。身體因失去重心而倒下。</p><p>例：雪道で滑って転んだ。</p>
-      <p><b>躓く</b>:絆。腳尖絆到東西而腳步踉蹌。</p><p>例：石に躓いて転ぶ。</p>
+      <h2>促す（うながす）& 急かす（せかす）</h2>
+      <p><b>促す</b>:敦促。敦促對方做出事物的進行或決斷。帶有在後面推對方一把的感覺。</p><p>例：政府は若者にワクチンの接種を促す。</p>
+      <p><b>急かす</b>:催促。催促對方盡快實行必須要進行或決斷的事物。帶有命令、強迫對方的感覺。</p><p>例：彼は仕事で急かされるとすぐ怒る。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference019.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference022.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference017.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference020.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
