--- a/wordDifference/wordDifference022.html
+++ b/wordDifference/wordDifference022.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>転ぶ、躓く的差異</title>
+    <title>蹲る、しゃがむ的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>転ぶ（ころぶ） & 躓く（つまずく）</h2>
-      <p><b>転ぶ</b>:跌倒。身體因失去重心而倒下。</p><p>例：雪道で滑って転んだ。</p>
-      <p><b>躓く</b>:絆。腳尖絆到東西而腳步踉蹌。</p><p>例：石に躓いて転ぶ。</p>
+      <h2>蹲る（うずくまる）& しゃがむ </h2>
+      <p><b>蹲る</b>:蜷縮。身體抱成一團縮起來的動作。</p><p>例：彼は膝を抱えてうずくまっている。</p>
+      <p><b>しゃがむ</b>:蹲。膝蓋彎曲，腰部下落蹲低的動作。</p><p>例：彼は仕事で急かされるとすぐ怒る。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference019.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference023.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference017.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference021.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
