--- a/wordDifference/wordDifference023.html
+++ b/wordDifference/wordDifference023.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>転ぶ、躓く的差異</title>
+    <title>歩む、歩く的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>転ぶ（ころぶ） & 躓く（つまずく）</h2>
-      <p><b>転ぶ</b>:跌倒。身體因失去重心而倒下。</p><p>例：雪道で滑って転んだ。</p>
-      <p><b>躓く</b>:絆。腳尖絆到東西而腳步踉蹌。</p><p>例：石に躓いて転ぶ。</p>
+      <h2>歩む（あゆむ）& 歩く（あるく）</h2>
+      <p><b>歩む</b>:前行。側重於抽象事物上的進展前行。</p><p>例：これからは職人の道を歩む。</p>
+      <p><b>歩く</b>:步行。側重於具體動作上的用腳前進。</p><p>例：店は駅から歩くと5分くらいかかる。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference019.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference017.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference022.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
