--- a/wordCompose/wordCompose013.html
+++ b/wordCompose/wordCompose013.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文複合語:~扱い的用法</title>
+    <title>日文複合語:~党的用法</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,19 +16,19 @@
    
   <!-- Contents -->
     <div class="main">
-        <h2>扱い（あつかい）</h2>
-        <p>用法:名詞(身分、作用、狀態) + <b>扱い</b> = 當作…對待</p>
-        <p>．子供<b>扱い</b>(當作小孩對待)</p>
-        <p>．機密<b>扱い</b>(當作機密對待)</p>
-        <p>．欠席<b>扱い</b>(當作缺席對待)</p>
+      <h2>党（とう）</h2>
+      <p>用法:名詞 + <b>党</b> = 表示喜愛某類型事物的人</p>
+      <p>．甘<b>党</b>(喜愛甜食的人)
+      <p>．コーヒー<b>党</b>(喜愛咖啡的人)</p>
+      <p>．猫<b>党</b>(喜愛貓的人)</p>
     </div>
  
   <!-- Navs -->
     <nav>
     <ul>
-      <li><a rel="prev" href="wordCompose006.html">看上一篇</a></li>
+      <li><a rel="prev" href="wordCompose.html">看上一篇</a></li>
       <li><a rel="prev" href="wordCompose.html">索引</a></li>
-      <li><a rel="prev" href="wordCompose004.html">看下一篇</a></li>
+      <li><a rel="prev" href="wordCompose012.html">看下一篇</a></li>
     </ul>
     </nav>
 
