--- a/wordDifference/wordDifference022.html
+++ b/wordDifference/wordDifference022.html
@@ -18,7 +18,7 @@
     <div class="main">
       <h2>蹲る（うずくまる）& しゃがむ </h2>
       <p><b>蹲る</b>:蜷縮。身體抱成一團縮起來的動作。</p><p>例：彼は膝を抱えてうずくまっている。</p>
-      <p><b>しゃがむ</b>:蹲。膝蓋彎曲，腰部下落蹲低的動作。</p><p>例：彼は仕事で急かされるとすぐ怒る。</p>
+      <p><b>しゃがむ</b>:蹲。膝蓋彎曲，腰部下落蹲低的動作。</p><p>例：バランスが崩れたので、しゃがんだ時に後ろに倒れた。</p>
     </div>
  
   <!-- Navs -->
