--- a/wordCompose/wordCompose008.html
+++ b/wordCompose/wordCompose008.html
@@ -26,7 +26,7 @@
   <!-- Navs -->
     <nav>
     <ul>
-      <li><a rel="prev" href="wordCompose.html">看上一篇</a></li>
+      <li><a rel="prev" href="wordCompose009.html">看上一篇</a></li>
       <li><a rel="prev" href="wordCompose.html">索引</a></li>
       <li><a rel="prev" href="wordCompose007.html">看下一篇</a></li>
     </ul>
