--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
   <!-- Nav Section -->
 
   <div class="dropdown">
-    <button class="dropbtn">日文學習</button>
+    <button class="dropbtn">基礎文法</button>
+    <div class="dropdown-content">
+    <a href="">基礎架構</a>
+    <a href="./grammar/article001.html">日文敬語</a>
+    </div>
+  </div>
+
+  <div class="dropdown">
+    <button class="dropbtn">深度學習</button>
     <div class="dropdown-content">
     <a href="wordOrigin/wordOrigin.html">看語源學日文</a>
     <a href="wordDifference/wordDifference.html">看差異學日文</a>
