--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button class="dropbtn">基礎文法</button>
     <div class="dropdown-content">
     <a href="">基礎架構</a>
-    <a href="./grammar/article001.html">日文敬語</a>
+    <a href="grammar/article001.html">日文敬語</a>
     </div>
   </div>
 
