--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
     <h3>伸び代（のびしろ）：成長空間</h3>
   </div>
 
+  <a href="http://semenaxcaps.com"><img src="http://semenaxcaps.com/count.php?c_style=21&id=1628653153" border="0" alt="semenaxcaps.com"></a><br>
+
+
+
 </body>
 
 <footer>
