--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
   <!-- Nav Section -->
-
+<div class="navbar">
+ 
   <div class="dropdown">
     <button class="dropbtn">基礎文法</button>
     <div class="dropdown-content">
@@ -34,6 +35,8 @@
     <a href="">主題</a>
     </div>
   </div>
+  
+</div>
 
 
   <h1>日文小聚落</h1>
