--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <h3>伸び代（のびしろ）：成長空間</h3>
   </div>
 
+  <div><script type="text/javascript" src="http://services.webestools.com/cpt_visitors/70619-14-6.js"></script></div>
 
 </body>
 
